# Nrf_smart_door_lock_emulation

./: .clang-format  Dockerfile  README.md
.github/workflows/: main.yaml
docs/: Doxyfile
scripts/: build.py  clean.py  flash.py  generate_doxygen.py  monitor.py  run_cpp_checker.py  run_unit_tests.py
smart_door_lock/: CMakeLists.txt  prj.conf
smart_door_lock/src/: main.c
smart_door_lock/src/board/: board.c  board.h
smart_door_lock/src/custom_bluetooth/: CMakeLists.txt  custom_bluetooth.c  custom_bluetooth.h
smart_door_lock/src/file_system/: CMakeLists.txt  file_system.c  file_system.h
smart_door_lock/src/littlefs_file_system/: CMakeLists.txt  littlefs_file_system.c  littlefs_file_system.h
smart_door_lock/src/nfc/: nfc.c  nfc.h
smart_door_lock/src/nvs_file_system/: CMakeLists.txt  nvs_file_system.c  nvs_file_system.h
tests/smart_door_lock/: CMakeLists.txt
tests/smart_door_lock/unit_tests/mocks/: CMakeLists.txt
tests/smart_door_lock/unit_tests/mocks/board/: CMakeLists.txt  board.h  mock_board.cpp  mock_board.h
tests/smart_door_lock/unit_tests/mocks/custom_bluetooth/: CMakeLists.txt  custom_bluetooth.cpp  custom_bluetooth.h
tests/smart_door_lock/unit_tests/mocks/dk_buttons_and_leds/: CMakeLists.txt  dk_buttons_and_leds.h  mock_dk_buttons_and_leds.cpp  mock_dk_buttons_and_leds.h
tests/smart_door_lock/unit_tests/mocks/file_system/: CMakeLists.txt  file_system.h  mock_file_system.cpp  mock_file_system.h
tests/smart_door_lock/unit_tests/mocks/nfc/: CMakeLists.txt  mock_nfc.cpp  mock_nfc.h  nfc.h
tests/smart_door_lock/unit_tests/mocks/nfc_t4t_lib/: CMakeLists.txt  mock_nfc_t4t_lib.cpp  mock_nfc_t4t_lib.h  nfc_t4t_lib.h
tests/smart_door_lock/unit_tests/mocks/nvs_file_system/: CMakeLists.txt  mock_nvs_file_system.cpp  mock_nvs_file_system.h  nvs_file_system.h
tests/smart_door_lock/unit_tests/mocks/singleton_template/: singleton_template.h
tests/smart_door_lock/unit_tests/mocks/subsys/: CMakeLists.txt  mock_subsys_nfc.cpp  mock_subsys_nfc.h
tests/smart_door_lock/unit_tests/mocks/subsys/nfc/ndef/: uri_msg.h  uri_rec.h
tests/smart_door_lock/unit_tests/mocks/subsys/nfc/t4t/: ndef_file.h
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/: CMakeLists.txt
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/zephyr/: device.h  device_tree.h  kernel.h  kernel_structs.h  sys_clock.h  types.h
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/zephyr/device_tree/: ordinals.h
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/zephyr/fs/: fs.h  fs_interface.h  littlefs.h  nvs.h
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/zephyr/storage/: flash_map.h
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/zephyr/sys/: dlist.h  printk.h  slist.h
tests/smart_door_lock/unit_tests/mocks/zephyr_headers/zephyr/toolchain/: common.h
tests/smart_door_lock/unit_tests/mocks/zephyr_mocks/: CMakeLists.txt
tests/smart_door_lock/unit_tests/mocks/zephyr_mocks/fs/: CMakeLists.txt  mock_fs.cpp  mock_fs.h  mock_nvs.cpp  mock_nvs.h
tests/smart_door_lock/unit_tests/mocks/zephyr_mocks/kernel/: CMakeLists.txt  mock_zephyr_kernel.cpp  mock_zephyr_kernel.h
tests/smart_door_lock/unit_tests/tests/: CMakeLists.txt
tests/smart_door_lock/unit_tests/tests/board/: CMakeLists.txt  ut_board.cpp
tests/smart_door_lock/unit_tests/tests/littlefs_file_system/: CMakeLists.txt  ut_littlefs_file_system.cpp
tests/smart_door_lock/unit_tests/tests/nfc/: CMakeLists.txt  ut_nfc.cpp
tests/smart_door_lock/unit_tests/tests/nvs_file_system/: CMakeLists.txt  ut_nvs_file_system.cpp
