add_subdirectory(board)
add_subdirectory(custom_bluetooth)
add_subdirectory(dk_buttons_and_leds)
add_subdirectory(file_system)
add_subdirectory(nfc)
add_subdirectory(nfc_t4t_lib)
add_subdirectory(nvs_file_system)
add_subdirectory(singleton_template)
add_subdirectory(subsys)
add_subdirectory(zephyr_headers)
add_subdirectory(zephyr_mocks)
